--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,9 @@
   "rules": {
     "no-shadow": "off",
     "no-param-reassign": "off",
-    "eol-last": "off"
+    "eol-last": "off",
+    "max-classes-per-file": "off",
+    "comma-dangle": "off"
   },
   "ignorePatterns": ["dist/", "build/"]
 }
